# WIGO

./: .gitignore  README.md
backend/: install_dependency.bash
backend/WIGO-ros/src/test/: CMakeLists.txt  package.xml
backend/WIGO-ros/src/test/launch/: camera.launch  wigo_ros.launch
backend/WIGO-ros/src/test/src/VINS-Mobile/VINS_ThirdPartyLib/ceres-solver/internal/ceres/: block_evaluate_preparer.cc
backend/WIGO-ros/src/test/src/VINS-Mobile/VINS_ios/: PJRSignatureView.m  VINS.cpp  VINS.hpp  VINSMobileNode.cpp  VINSMobileNode.h  ViewController.mm  draw_result.cpp  feature_manager.cpp  feature_tracker.cpp  feature_tracker.hpp  global_param.cpp  global_param.hpp  imu_factor.h  imu_factor_pnp.h  inital_sfm.cpp  initial_aligment.cpp  integration_base.h  marginalization_factor.cpp  motion_estimator.cpp  utility.hpp  vins_pnp.cpp
backend/WIGO-ros/src/test/src/VINS-Mobile/VINS_ios/delaunay/: delaunay.cpp
backend/WIGO-ros/src/test/src/VINS-Mobile/VINS_ios/loop/: TemplatedLoopDetector.h  VocabularyBinary.cpp  demoDetector.h  keyfame_database.cpp  keyfame_database.h  keyframe.cpp  keyframe.h  loop_closure.cpp
backend/hello_ar_c/app/: CMakeLists.txt  build.gradle
backend/hello_ar_c/app/src/main/: AndroidManifest.xml
backend/hello_ar_c/app/src/main/cpp/: astar_pathfinding.h  hello_ar_application.cc  hello_ar_application.h
backend/hello_ar_c/app/src/main/java/com/google/ar/core/examples/c/helloar/: HelloArActivity.java  JniInterface.java
backend/hello_ar_c/app/src/main/res/layout/: activity_main.xml
backend/pose_graph/: CMakeLists.txt
backend/pose_graph/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h
backend/pose_graph/src/include/: keyframe.h  parameters.h  pose_graph.h
backend/pose_graph/src/utility/: messages.h  utility.h
backend/test/: CMakeLists.txt
frontend/: settings.gradle.kts
frontend/app/: CMakeLists.txt  build.gradle.kts
frontend/app/src/androidTest/java/com/capstone/whereigo/: ExampleInstrumentedTest.kt
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/assets/models/: arrow.mtl  carArrow.mtl  location_pin.mtl
frontend/app/src/main/assets/shaders/: line.frag  line.vert
frontend/app/src/main/cpp/: astar_pathfinding.cc  astar_pathfinding.h  audio_player.cc  audio_player.h  direction_helper.cc  direction_helper.h  direction_utils.cc  direction_utils.h  hello_ar_application.cc  hello_ar_application.h  java_bridge.cc  java_bridge.h  jni_interface.cc  line_renderer.cc  line_renderer.h  obj_renderer.h  path_navigator.cc  path_navigator.h  plane_renderer.h  point_cloud_renderer.h  pose_helper.cc  pose_helper.h  texture.h  types.cc  types.h  util.cc  util.h
frontend/app/src/main/cpp/renderer/: background_renderer.h  obj_renderer.cc
frontend/app/src/main/java/com/capstone/whereigo/: AudioManager.java  AudioManager.kt  BuildingInputFragment.java  CameraPermissionHelper.java  CardFragment.java  CardPagerAdapter.java  DepthSettings.java  DownloadActivity.kt  DownloadFragment.java  DownloadFragment.kt  FileDownloader.java  HelloArActivity.java  HelloArFragment.java  InstantPlacementSettings.java  ItemSpacingDecoration.java  ItemSpacingDecoration.kt  JniInterface.java  LabelReader.java  MainActivity.java  MainActivity.kt  MapData.java  MapData.kt  MapDataAdapter.java  MapDataAdapter.kt  MappingActivity.java  MappingFragment.java  MappingTargetInfoFragment.java  NativeHolderViewModel.java  NodeLabelData.java  NodeLabelingDialog.java  PoseGraphLoader.java  PoseStamp.java  PoseStampCardFragment.java  PoseStampData.java  PoseStampDataAdapter.java  PoseStampLabelingDialog.java  PoseStampRecyclerViewAdapter.java  PoseStampViewModel.java  PoseStampViewPagerAdapter.java  SearchActivity.java  (+11 more)
frontend/app/src/main/java/com/capstone/whereigo/network/: GPTApiService.kt  GPTRequest.kt  GPTResponse.kt
frontend/app/src/main/java/com/capstone/whereigo/ui/: CircleView.java  DirectionCompassView.java  RotationIndicatorView.java  TargetDirectionView.java
frontend/app/src/main/res/drawable/: baseline_mic_48.xml  bg_input_box.xml  bg_rounded.xml  bg_surface_hint.xml  bottom_rounded_background.xml  ic_arrow_back.xml  ic_back.xml  ic_back_black.xml  ic_calendar.xml  ic_favorite.xml  ic_favorite_selected.xml  ic_file_size.xml  ic_scan.xml  ic_sd_card.xml  ic_sound_up.xml  ic_vibration.xml  item_background.xml  outer_circle.xml  progress_bar_custom.xml  rounded_background.xml  rounded_category.xml  rounded_toolbar.xml  top_rounded_background.xml  yellow_dot.xml  yellow_sector.xml
frontend/app/src/main/res/font/: font_res.xml
frontend/app/src/main/res/layout/: activity_download.xml  activity_main.xml  activity_mapping.xml  activity_search.xml  activity_search_history.xml  activity_setting.xml  activity_settings.xml  activity_splash.xml  add_board_down.xml  card_node_labeling.xml  dialog_floor_input.xml  dialog_voice_record.xml  fragment_building_input.xml  fragment_download.xml  fragment_hello_ar.xml  fragment_mapping.xml  fragment_mapping_target_info.xml  fragment_node_labeling.xml  fragment_settings.xml  item_map_data.xml  item_pose_stamp_data.xml  item_search_result.xml  layout.xml
frontend/app/src/main/res/menu/: search_menu.xml
frontend/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
frontend/app/src/main/res/values-night/: themes.xml
frontend/app/src/main/res/xml/: download_preference.xml  root_preferences.xml  sound_preference.xml
frontend/app/src/test/java/com/capstone/whereigo/: ExampleUnitTest.kt
frontend/gradle/: libs.versions.toml
frontend/gradle/wrapper/: gradle-wrapper.properties
